完成登录页面基本样式

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,4 +1,4 @@
-#SignUp {
+#Login {
 	max-width: 500px;
 	padding: 50px 0;
 	margin: 0 auto;
@@ -8,7 +8,7 @@
 	h1 {
 		text-align: center;
 	}
-	>.signUpButton{
+	>.loginButton{
 		width: 100%;
 	}
 }
