--- a/src/components/Index/Index.scss
+++ b/src/components/Index/Index.scss
@@ -10,4 +10,10 @@
 		padding: 8px 16px;
 		border-bottom: 1px solid #ddd;
 	}
+
+	> main {
+		padding: 16px 0;
+		display: flex;
+		justify-content: space-between;
+	}
 }
