--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -1,6 +1,11 @@
 #Todos {
 	padding: 16px;
-	margin: 16px;
 	border: 1px solid #dddddd;
 	border-radius: 4px;
+	width: calc(50% - 8px);
+	box-shadow: 0 2px 0 rgba(255, 255, 255, .2);
+
+	> .todoList {
+		margin-top: 16px;
+	}
 }
