--- a/src/components/Todos/Todos.scss
+++ b/src/components/Todos/Todos.scss
@@ -4,6 +4,7 @@
 	border-radius: 4px;
 	width: calc(50% - 8px);
 	box-shadow: 0 2px 0 rgba(255, 255, 255, .2);
+	background: #ffffff;
 
 	> .todoList {
 		margin-top: 16px;
