--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,14 +1,19 @@
 #Home {
 	max-width: 1000px;
-	padding: 16px;
 	margin: 0 auto;
+	padding: 16px;
 
 	> header {
 		display: flex;
-		justify-content: space-between;
 		align-items: center;
+		justify-content: space-between;
 		padding: 8px 16px;
 		border-bottom: 1px solid #ddd;
+
+		.logo {
+			font-size: 2rem;
+			font-weight: bold;
+		}
 	}
 
 	> main {
